--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,9 @@
     </dependencies>
 
     <build>
+
+        <finalName>dungeonbuilder</finalName>
+
         <sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>
         <testSourceDirectory>${project.basedir}/src/test/kotlin</testSourceDirectory>
         <plugins>
